--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         
     </head>
     <body>
-        <h1>THIS IS YOUR LIBRARY</h1>
+        <h1>LIBRARY APP</h1>
         <div class='container'>
             <!--<div class='child'>
                 <p>Book:The Shining</p>
